--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,8 @@
     flex-direction: column;
 }
 .element-column{
-    width: 40px;
+    width: auto;
+    min-width: 40px;
     margin-right: 3px;
     /*border: 1px black dashed;  */
 }
@@ -25,7 +26,12 @@
     margin: auto;
     display: flex;
 }
-.oh-element > .element{
+.ho-element{
+    margin: auto;
+    display: flex;
+    flex-direction: row-reverse;
+}
+.oh-element > .element, .ho-element > .element{
     width: 30px;
 }
 
